@@ -1,4 +1,5 @@
 4.0
+	+ Add confirmation when removing mail account via the edit user form
 	+ Add hostname change confirmation dialog to wizard
 	+ Fixed EBox::LDAPBase::lastModificationTime
 	+ Join as additional domain controller on initial configuration wizard
