@@ -1,4 +1,5 @@
 4.0
+	+ Added Zentyal.MailUserAddon.editFormWillRemoveAccount JS method
 	+ Prepopulate installation wizard by default with the Samba domain
 	+ Fixed bug in initialSetup which triggered migration on fresh install
 	+ Increased mail_max_userip_connections to 20 for IMAP protocol
